--- a/Eltic/package.json
+++ b/Eltic/package.json
@@ -13,21 +13,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.19",
-    "vue": "^3.5.22"
+    "@tailwindcss/vite": "^4.1.17",
+    "tailwindcss": "^4.1.17",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
-    "autoprefixer": "^10.4.21",
-    "init": "^0.1.2",
-    "postcss": "^8.5.6",
     "prettier": "3.6.2",
-    "tailwindcss": "^4.1.14",
-    "tailwindcss-cli": "^0.1.2",
-    "vite": "^7.1.7",
-    "vite-plugin-vue-devtools": "^8.0.2"
+    "vite": "^7.1.11",
+    "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
